correção-pseudo-classes

--- a/css/style.css
+++ b/css/style.css
@@ -75,15 +75,15 @@ body{
     border-color: transparent;
     padding: 2px 20px;
   }
-  a:link{
+  .links-divas:link{
     color:#99ffff;
   }
-  a:active{
+  .links-divas:active{
     background-color:#FF9E9E;
   }
-  a:hover{
+  .links-divas:hover{
     color:#ffe36d;
   }
-  a:active{
+  .links-divas:active{
     color:blue;
   }
